--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,5 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_INCLUDE_DIR})
 
 find_package(glfw3 3.2 REQUIRED)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE glfw glad cglm)
+target_link_libraries(${PROJECT_NAME} PRIVATE glfw glad)
+target_link_libraries(${PROJECT_NAME} PUBLIC cglm)
